kubernetes-Doc/Kube-Ingress/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phone-demo
  template:
    metadata:
      labels:
        app: phone-demo
    spec:
      containers:
        - name: phone-demo
          image: phone-demo:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: phone-demo-storage
              mountPath: /data
      volumes:
        - name: phone-demo-storage
          persistentVolumeClaim:
            claimName: phone-demo-pvc
