kubernetes-Doc/Kube-Ingress/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-demo-service
spec:
  selector:
    app: phone-demo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
