kubernetes-Doc/Kube-Ingress/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: phone-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phone-demo-service
                port:
                  number: 80
